@@ -147,6 +147,8 @@ The text in the "Updated" column will be bold if the bug has changed in the last
 <p>
 Each table row is color coded according to the bug status.  Here is an explanation of the default colorings:
 
+<p>
+<b>color coding</b>
 <ul>
 	<li>red: new - bug is new
 	<li>purple: feedback - bug requires more feedback before work can proceed
@@ -155,6 +157,39 @@ Each table row is color coded according to the bug status.  Here is an explanati
 	<li>blue: assigned - bug is currently being worked on by a developer
 	<li>gray: resolved - bug is closed
 	<li>light gray: resolved - bug is closed
+</ul>
+
+<p>
+<b>severity</b>
+<ul>
+	<li>block - prevents further work/progress from being made
+	<li>crash - crashes the application or OS
+	<li>major - major bug
+	<li>minor - minor bug
+	<li>tweak - needs tweaking
+	<li>text - error in the text
+	<li>trivial - being nitpicky
+	<li>feature - requesting new feature
+</ul>
+
+<p>
+<b>status</b>
+<ul>
+	<li>new - new bugs
+	<li>feedback - bug requires more information
+	<li>acknowledged - bug has been looked at but not confirmed or assigned
+	<li>confirmed - confirmed and reproducible
+	<li>assigned - assigned to a developer
+	<li>resolved - bug is closed
+</ul>
+
+<p>
+<b>projection</b>
+<ul>
+	<li>redesign - needs a redesign
+	<li>major rework - large amount of work
+	<li>minor fix - shouldn't take a lot of time
+	<li>tweak - done in a jiffy
 </ul>
 
 <p>
