@@ -13,7 +13,7 @@
 				$g_main_page, $g_view_bug_all_page,
 				$g_report_bug_page, $g_report_bug_advanced_page,
 				$g_summary_page, $g_account_page, $g_manage_page,
-				$g_news_menu_page, $g_logout_page;
+				$g_news_menu_page, $g_usage_doc_page, $g_logout_page;
 	}
 
 	db_mysql_connect( $g_hostname, $g_db_username, $g_db_password, $g_database_name );
@@ -48,6 +48,7 @@
 	<a href="<? echo $g_path.$g_manage_page ?>">Manage</a> |
 	<a href="<? echo $g_path.$g_news_menu_page ?>">Edit News</a> |
 <? } ?>
+	<a href="<? echo $g_path.$g_usage_doc_page ?>">Docs</a> |
 	<a href="<? echo $g_path.$g_logout_page ?>">Logout</a>
 </font>
 </div>
